Global template variables

--- a/assets/templates/error/404.pug
+++ b/assets/templates/error/404.pug
@@ -1,6 +1,6 @@
-extends ../base.pug
+extends ../_rpg.pug
 
-block body
+block content
   | % import "bootstrap/wtf.html" as wtf %
   .content-section
     .outer
