--- a/assets/templates/base.pug
+++ b/assets/templates/base.pug
@@ -15,34 +15,34 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a(class="navbar-brand topnav", href="{ url_for('home.homepage') }") Project Dream Team
+          a(class="navbar-brand topnav", href="{{ url_for('home.homepage') }}") Project Dream Team
         div(class="collapse navbar-collapse", id="bs-example-navbar-collapse-1")
           ul(class="nav navbar-nav navbar-right")
             | {% if current_user.is_authenticated %}
             | {% if current_user.is_admin %}
             li
-              a(href="{ url_for('home.admin_dashboard') }") Dashboard
+              a(href="{{ url_for('home.admin_dashboard') }}") Dashboard
             li
-              a(href="{ url_for('admin.list_departments') }") Departments
+              a(href="{{ url_for('admin.list_departments') }}") Departments
             li
-              a(href="{ url_for('admin.list_roles') }") Roles
+              a(href="{{ url_for('admin.list_roles') }}") Roles
             li
-              a(href="{ url_for('admin.list_employees') }") Employees
+              a(href="{{ url_for('admin.list_employees') }}") Employees
             | {% else %}
             li
-              a(href="{ url_for('home.dashboard') }") Dashboard
+              a(href="{{ url_for('home.dashboard') }}") Dashboard
             | {% endif %}
             li
-              a(href="{ url_for('auth.logout') }}") Logout
+              a(href="{{ url_for('auth.logout') }}") Logout
             li
               a <i class="fa fa-user"></i> Hi, {{ current_user.username }}!
             | {% else %}
             li
-              a(href="{ url_for('home.homepage') }") Home
+              a(href="{{ url_for('home.homepage') }}") Home
             li
-              a(href="{ url_for('auth.register') }") Register
+              a(href="{{ url_for('auth.register') }}") Register
             li
-              a(href="{ url_for('auth.login') }") Login
+              a(href="{{ url_for('auth.login') }}") Login
             | {% endif %}
 
     .wrapper
@@ -56,16 +56,16 @@ html
           .col-lg-12
             ul.list-inline
               li
-                a(href="{ url_for('home.homepage') }") Home
+                a(href="{{ url_for('home.homepage') }}") Home
               li.footer-menu-divider .
               | {% if current_user.is_authenticated %}
               li
-                a(href="{ url_for('auth.logout') }") Logout
+                a(href="{{ url_for('auth.logout') }}") Logout
               | {% else %}
               li
-                a(href="{ url_for('auth.register') }") Register
+                a(href="{{ url_for('auth.register') }}") Register
               li.footer-menu-divider .
               li
-                a(href="{ url_for('auth.login') }") Login
+                a(href="{{ url_for('auth.login') }}") Login
               | {% endif %}
             p(class="copyright text-muted small") Copyright &copy; 2017/ All Rights Reserved
