--- a/assets/less/_theme.less
+++ b/assets/less/_theme.less
@@ -5,13 +5,7 @@ body, h1, h2, h3 {
     font-weight: 700;
 }
 
-a, .navbar-default .navbar-brand, .navbar-default .navbar-nav>li>a {
-  color: @links;
-}
-
-a:hover, .navbar-default .navbar-brand:hover, .navbar-default .navbar-nav>li>a:hover {
-  color: @linksHover;
-}
+@import "_navbar.less";
 
 footer {
     padding: 50px 0;
@@ -90,10 +84,6 @@ p.copyright {
 .lead {
     font-size: 18px;
     font-weight: 400;
-}
-
-.topnav {
-    font-size: 14px;
 }
 
 .wrapper {
