--- a/assets/templates/_menu.pug
+++ b/assets/templates/_menu.pug
@@ -1,10 +1,4 @@
 ul(class="nav navbar-nav navbar-right")
-  li
-    a(href="{ url_for('list_protocols') }") Протоколы
-  li
-    a(href="{ url_for('list_decisions') }") Решения
-  li
-    a(href="{ url_for('list_resolutions') }") Постановления
   li(class="dropdown")
     a(href="#", class="dropdown-toggle", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") Добавить <span class="caret"></span>
     ul(class="dropdown-menu")
@@ -50,5 +44,5 @@ ul(class="nav navbar-nav navbar-right")
   li
     a(href="{ url_for('auth.register') }") Register
   li
-    a(href="{ url_for('auth.login') }") Login
+    a(href="{{ url_for('auth.login') }}") Login
   | {% endif %}
