--- a/assets/templates/error/500.pug
+++ b/assets/templates/error/500.pug
@@ -1,13 +1,7 @@
-extends ../base.pug
+extends _error.pug
 
-block body
-  | {% import "bootstrap/wtf.html" as wtf %}
-  .content-section
-    .outer
-      .middle
-        .inner
-          div(style="text-align: center;")
-            h1 500 Error
-            h3 The server encountered an internal error. That's all we know.
-            hr.intro-divider
-            a(href="{{ url_for('home.homepage') }}", class="btn btn-default btn-lg") <i class="fa fa-home"></i> Home
+block errortitle
+  | 500 Error
+
+block description
+  | The server encountered an internal error. That's all we know.
