Editing galaxy types

--- a/assets/templates/admin/index.pug
+++ b/assets/templates/admin/index.pug
@@ -13,4 +13,6 @@ block content
               li
                 a(href="{{ url_for('world.world_list') }}") Worlds
               li
-                a(href="{{ url_for('admin.galaxy_list') }}") Galaxies
+                a(href="{{ url_for('admin.galaxy_name_list') }}") Galaxy names
+              li
+                a(href="{{ url_for('admin.galaxy_type_list') }}") Galaxy types
