--- a/assets/templates/admin/list_galaxy.pug
+++ b/assets/templates/admin/list_galaxy.pug
@@ -2,12 +2,12 @@ extends ../_base.pug
 
 block content
   .content-section
-    h1 Select Galaxy Name
+    h1 {{title}}
 
-    +panel("Select Galaxy Name", false, false, true)
+    +panel("{{title}}", false, false, true)
       div(class="well well-sm btn-toolbar well-toolbar", role="toolbar", aria-label="toolbar")
         | &nbsp;
-        a(href="{{ url_for('admin.galaxy_edit') }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i>
+        a(href="{{ url_for(edit) }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i>
 
         .pull-right
           strong Total: 
@@ -27,14 +27,12 @@ block content
                 td 
                   center
                     div(class="btn-group btn-group-xs")
-                      a(href="{{ url_for('world.world_show', world_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
-                        i(class="fa fa-search")
-                      a(href="{{ url_for('admin.galaxy_edit', galaxy_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                      a(href="{{ url_for(edit, id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                         i(class="fa fa-edit")
-                      a(data-href="{{ url_for('world.world_del', world_id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
+                      a(data-href="{{ url_for(del_link, id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                         i(class="fa fa-eraser")
                 td
-                  a(href="{{ url_for('admin.galaxy_edit', galaxy_id=i.id) }}") {{i}}
+                  a(href="{{ url_for(edit, id=i.id) }}") {{i}}
 
               | {% endfor %}
       | {% else %}
