--- a/assets/templates/admin/index.pug
+++ b/assets/templates/admin/index.pug
@@ -15,4 +15,8 @@ block content
               li
                 a(href="{{ url_for('admin.galaxy_name_list') }}") Galaxy names
               li
+                a(href="{{ url_for('admin.galaxy_placement_list') }}") Galaxy placements
+              li
+                a(href="{{ url_for('admin.galaxy_form_list') }}") Galaxy forms
+              li
                 a(href="{{ url_for('admin.galaxy_type_list') }}") Galaxy types
