--- a/assets/templates/world/view.pug
+++ b/assets/templates/world/view.pug
@@ -31,28 +31,24 @@ block content
                     div(class="btn-group btn-group-xs")
                       a(href="{{ url_for('world.world_show', world_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
                         i(class="fa fa-search")
-                      a(href="{{ url_for('world.world_edit', world_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                      | {% if i.id %}
+                      a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                         i(class="fa fa-edit")
                       a(data-href="{{ url_for('world.world_del', world_id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                         i(class="fa fa-eraser")
-                td
-                  a(href="{{ url_for('world.world_show', world_id=i.id) }}") {{i}}
-
-              | {% endfor %}
-              | {% for i in random_galaxies %}
-              tr
-                td 
-                  center
-                    div(class="btn-group btn-group-xs")
-                      a(href="{{ url_for('world.world_show', world_id=0) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
-                        i(class="fa fa-search")
-                      a(href="{{ url_for('world.world_edit', world_id=0) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                      | {% else %}
+                      a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                         i(class="fa fa-edit")
-                      a(data-href="{{ url_for('world.world_del', world_id=0) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
+                      a(data-href="{{ url_for('world.world_del', world_id=0) }}", class="btn btn-sm btn-primary confirm disabled" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                         i(class="fa fa-eraser")
+                      | {% endif %}
                 td
-                  a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title) }}") {{i}} 
+                  | {% if i.id %}
+                  a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}") {{i}}
+                  | {% else %}
+                  a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}") {{i}} 
                   span(class="label label-info") Generate
+                  | {% endif %}
 
               | {% endfor %}
 
