--- a/assets/templates/world/view.pug
+++ b/assets/templates/world/view.pug
@@ -3,54 +3,50 @@ extends ../_base.pug
 block content
   .content-section
     h1 {{world.title}}
-
-    div {{world.description}}
-
-    a(href="{{ url_for('world.galaxy_edit') }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i> Add Galaxy
-    +panel("Select Galaxy", false, false, true)
-      div(class="well well-sm btn-toolbar well-toolbar", role="toolbar", aria-label="toolbar")
-        | &nbsp;
-        a(href="{{ url_for('world.world_edit') }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i>
-
-        .pull-right
-          strong Total: 
-          | { pagination.total }
-      div
-        .table-responsive
-          table(class="table table-bordered table-hover")
-            thead
-              tr
-                th(class="col-md-1 col-lg1 col-sm-1")
-                th
-                  | Galaxy
-            tbody
-              | {% for i in galaxies %}
-              tr
-                td 
-                  center
-                    div(class="btn-group btn-group-xs")
-                      a(href="{{ url_for('world.world_show', world_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
-                        i(class="fa fa-search")
+    .row
+      .col-md-4
+        +panel("Galaxy", false, false, true)
+          div(class="well well-sm btn-toolbar well-toolbar", role="toolbar", aria-label="toolbar")
+            | &nbsp;
+            a(href="{{ url_for('world.galaxy_edit') }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i>
+          div
+            .table-responsive
+              table(class="table table-bordered table-hover")
+                thead
+                  tr
+                    th(class="col-md-4 col-lg-4 col-sm-4")
+                    th
+                      | Galaxy
+                tbody
+                  | {% for i in galaxies %}
+                  tr
+                    td 
+                      center
+                        div(class="btn-group btn-group-xs")
+                          a(href="{{ url_for('world.world_show', world_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
+                            i(class="fa fa-search")
+                          | {% if i.id %}
+                          a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                            i(class="fa fa-edit")
+                          a(data-href="{{ url_for('world.world_del', world_id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
+                            i(class="fa fa-eraser")
+                          | {% else %}
+                          a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                            i(class="fa fa-edit")
+                          a(data-href="{{ url_for('world.world_del', world_id=0) }}", class="btn btn-sm btn-primary confirm disabled" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
+                            i(class="fa fa-eraser")
+                          | {% endif %}
+                    td
                       | {% if i.id %}
-                      a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
-                        i(class="fa fa-edit")
-                      a(data-href="{{ url_for('world.world_del', world_id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
-                        i(class="fa fa-eraser")
+                      a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}") {{i}}
                       | {% else %}
-                      a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
-                        i(class="fa fa-edit")
-                      a(data-href="{{ url_for('world.world_del', world_id=0) }}", class="btn btn-sm btn-primary confirm disabled" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
-                        i(class="fa fa-eraser")
+                      a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}") {{i}} 
+                      span(class="label label-info") Generate
                       | {% endif %}
-                td
-                  | {% if i.id %}
-                  a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}") {{i}}
-                  | {% else %}
-                  a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}") {{i}} 
-                  span(class="label label-info") Generate
-                  | {% endif %}
 
-              | {% endfor %}
+                  | {% endfor %}
+      .col-md-8
+        div {{world.description}}
 
     | {% if stars %}
     +panel("Select Star", false, false, true)
