--- a/assets/templates/admin/index.pug
+++ b/assets/templates/admin/index.pug
@@ -20,3 +20,5 @@ block content
                 a(href="{{ url_for('admin.galaxy_form_list') }}") Galaxy forms
               li
                 a(href="{{ url_for('admin.galaxy_type_list') }}") Galaxy types
+              li
+                a(href="{{ url_for('admin.star_type_list') }}") Star types                
