Edit & del functions

--- a/assets/templates/world/view.pug
+++ b/assets/templates/world/view.pug
@@ -26,9 +26,9 @@ block content
                           a(href="{{ url_for('world.galaxy_show', id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Просмотреть")
                             i(class="fa fa-search")
                           | {% if i.id %}
-                          a(href="{{ url_for('world.galaxy_edit', galaxy_id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                          a(href="{{ url_for('world.galaxy_edit', id=i.id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                             i(class="fa fa-edit")
-                          a(data-href="{{ url_for('world.galaxy_del', world_id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
+                          a(data-href="{{ url_for('world.galaxy_del', id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                             i(class="fa fa-eraser")
                           | {% else %}
                           a(href="{{ url_for('world.galaxy_edit', galaxy_title=i.title, world_id=world_id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
