--- a/assets/templates/world/view_star.pug
+++ b/assets/templates/world/view_star.pug
@@ -2,10 +2,10 @@ extends ../_base.pug
 
 block content
   .content-section
-    h1 {{galaxy.title}}
+    h1 {{star.title}}
     .row
       .col-md-4
-        +panel("Star", false, false, true)
+        +panel("Planet", false, false, true)
           div(class="well well-sm btn-toolbar well-toolbar", role="toolbar", aria-label="toolbar")
             | &nbsp;
             a(href="{{ url_for('world.star_edit') }}", class="btn btn-sm btn-primary", data-toggle="tooltip", title="Добавить") <i class="fa fa-plus"></i>
@@ -16,9 +16,9 @@ block content
                   tr
                     th(class="col-md-4 col-lg-4 col-sm-4")
                     th
-                      | Star
+                      | Planet
                 tbody
-                  | {% for i in stars %}
+                  | {% for i in planets %}
                   tr
                     td 
                       center
@@ -31,19 +31,25 @@ block content
                           a(data-href="{{ url_for('world.star_del', id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                             i(class="fa fa-eraser")
                           | {% else %}
-                          a(href="{{ url_for('world.star_edit', title=i.title, galaxy_id=galaxy_id, image=i.image) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                          a(href="{{ url_for('world.star_edit', title=i.title, galaxy_id=star_id, image=i.image) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                             i(class="fa fa-edit")
                           a(data-href="#", class="btn btn-sm btn-primary confirm disabled" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                             i(class="fa fa-eraser")
                           | {% endif %}
                     td
                       | {% if i.id %}
-                      a(href="{{ url_for('world.star_show', id=i.id) }}") {{i}}
+                      a(href="{{ url_for('world.galaxy_show', id=i.id) }}") {{i}}
                       | {% else %}
-                      a(href="{{ url_for('world.star_show', galaxy_title=i.title, galaxy_id=galaxy_id, image=i.image) }}") {{i}} 
+                      a(href="{{ url_for('world.galaxy_show', galaxy_title=i.title, galaxy_id=star_id, image=i.image) }}") {{i}} 
                       span(class="label label-info") Generate
                       | {% endif %}
 
                   | {% endfor %}
       .col-md-8
-        div {{galaxy.description}}
+        div(style="background-color:black; color:white;")
+          div
+            div
+              img(src="{{star.image_file}}")
+            div
+              | {{star}}
+        div {{star.description}}
