Creating star from template

--- a/assets/templates/world/view_galaxy.pug
+++ b/assets/templates/world/view_galaxy.pug
@@ -31,7 +31,7 @@ block content
                           a(data-href="{{ url_for('world.star_del', id=i.id) }}", class="btn btn-sm btn-primary confirm" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                             i(class="fa fa-eraser")
                           | {% else %}
-                          a(href="{{ url_for('world.star_edit', title=i.title, galaxy_id=galaxy_id, image=i.image) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
+                          a(href="{{ url_for('world.star_edit', title=i.title, galaxy_id=galaxy_id, star_type=i.star_type_id) }}", class="btn btn-sm btn-primary" data-toggle="tooltip", title="Редактировать")
                             i(class="fa fa-edit")
                           a(data-href="#", class="btn btn-sm btn-primary confirm disabled" data-toggle="modal", title="Удалить", data-text="Вы уверены, что хотите удалить эту запись?", data-target="#confirm-del")
                             i(class="fa fa-eraser")
@@ -40,7 +40,7 @@ block content
                       | {% if i.id %}
                       a(href="{{ url_for('world.star_show', id=i.id) }}") {{i}}
                       | {% else %}
-                      a(href="{{ url_for('world.star_show', title=i.title, galaxy_id=galaxy_id, image=i.image) }}") {{i}} 
+                      a(href="{{ url_for('world.star_show', title=i.title, galaxy_id=galaxy_id, star_type=i.star_type_id) }}") {{i}} 
                       span(class="label label-info") Generate
                       | {% endif %}
 
