--- a/assets/templates/admin/index.pug
+++ b/assets/templates/admin/index.pug
@@ -22,3 +22,5 @@ block content
                 a(href="{{ url_for('admin.galaxy_type_list') }}") Galaxy types
               li
                 a(href="{{ url_for('admin.star_type_list') }}") Star types                
+              li
+                a(href="{{ url_for('admin.atmosphere_list') }}") Atmospheres
