--- a/assets/templates/world/view_star.pug
+++ b/assets/templates/world/view_star.pug
@@ -46,10 +46,34 @@ block content
 
                   | {% endfor %}
       .col-md-8
-        div(style="background-color:black; color:white;")
-          div
-            div
-              img(src="{{star.image_file}}")
-            div
-              | {{star}}
+        div(style="overflow-x:scroll; overflow-y:hidden; background-color:black; color:white; height:450px;")
+          div(style="width: 6000px;")
+            div(style="float:left; height:450px; width:150px; margin-right:25px;")
+              div
+                img(src="{{star.image_file}}")
+              div
+                | {{star}}
+            div(style="float:left; display:table; width: 5000px; position: relative;")
+              | {% for i in planets %}
+              div(style="display:table; position:absolute; width:{{i.size}}px; left:{{i.from_sun * 2}}px; vertical-align: middle;")
+                div(style="display:table-cell; width:{{i.size}}px; height:400px; vertical-align: middle;")
+                  img(src="{{i.image_file}}", width="{{i.size}}")
+                  div(style="width:{{i.size}}px;")
+                    | {{i}}
+              | {% endfor %}
+          //-
+            div(style="background-color:black; color:white; height:450px; width: 2000px;")
+              div(style="display:inline-block;")
+                div
+                  img(src="{{star.image_file}}")
+                div
+                  | {{star}}
+              div(style="display:inline-block; height:450px; width: 1500px; position: relative;")           
+                | {% for i in planets %}
+                div(style="display:inline-block; vertical-align:middle; position:absolute; width:{{i.size}}px; left:{{i.from_sun}}%;")
+                  div
+                    img(src="{{i.image_file}}", width="{{i.size}}")
+                  div(style="width:{{i.size}}px; overflow:hidden;")
+                    | {{i}}
+                | {% endfor %}
         div {{star.description}}
