Link to planet page

--- a/assets/templates/world/view_star.pug
+++ b/assets/templates/world/view_star.pug
@@ -56,10 +56,11 @@ block content
             div(style="float:left; display:table; width: 5000px; position: relative;")
               | {% for i in planets %}
               div(style="display:table; position:absolute; width:{{i.size}}px; left:{{i.from_sun * 2}}px; vertical-align: middle;")
-                div(style="display:table-cell; width:{{i.size}}px; height:400px; vertical-align: middle;")
-                  img(src="{{i.image_file}}", width="{{i.size}}")
-                  div(style="width:{{i.size}}px;")
-                    | {{i}}
+                a(href="{{ url_for('world.planet_show', id=i.id) }}")
+                  div(style="display:table-cell; width:{{i.size}}px; height:400px; vertical-align: middle;")
+                    img(src="{{i.image_file}}", width="{{i.size}}")
+                    div(style="width:{{i.size}}px;")
+                      | {{i}}
               | {% endfor %}
           //-
             div(style="background-color:black; color:white; height:450px; width: 2000px;")
